# marlon-disciplina-app

./: README.md
api-discipline/: API.postman_collection.json  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
api-discipline/api_discipline/api/: exceptions.py  middleware.py  mixins.py  repositories.py  services.py  transports.py
api-discipline/api_discipline/api/discipline/: apps.py  models.py  repository.py  service.py  transport.py  urls.py  views.py
api-discipline/api_discipline/api/discipline/migrations/: 0001_initial.py  0002_alter_discipline_options_alter_user_options.py
api-discipline/api_discipline/config/: asgi.py  settings.py  urls.py  wsgi.py
