[tool.poetry]
name = "api-discipline"
version = "0.1.0"
description = ""
authors = ["Ramon Alves <alvesramon.lima@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
